--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "author": "ronakonline1",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "nodemailer": "^6.7.1"
   }
 }
